<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.cerverodesing.cervero_admin.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/logowhite"
            android:id="@+id/imageViewLogo"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@id/textView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:text="@string/app_name_splash"
            android:textSize="24sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/SplashTextError"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:text="@string/app_error_msg"
            android:textSize="12sp"
            android:visibility="invisible"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/background_light" />

        <Button
            android:text="Reintentar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SplashLoginbutton"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="@string/app_dev_splash"
        android:textSize="12sp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@android:color/background_light" />

</FrameLayout>
